# haskell-sandbox

./: CSVParser.hs  ConfigParser.hs  LICENSE  LaTeXParser.hs  README.md  my.cfg
bibliomi/: Makefile  README.md  bibliomi.cabal
bibliomi/src/: Main.hs  Scrapers.hs  Types.hs
change-math-delims/: LICENSE  Main.hs  Makefile  change-math-delims.cabal
flytex/: Makefile  flytex.cabal
flytex/src/: Main.hs  Parsers.hs  RunShell.hs
strelitzia/: Makefile  README.md  strelitzia.cabal
strelitzia/src/: Main.hs  Parsers.hs  RunShell.hs  TeX.hs  Tlmgr.hs
tex-list-missings/: CHANGELOG.md  Makefile  README.md  tex-list-missings.cabal
tex-list-missings/src/: Main.hs  TeXLogParser.hs
tiny-lambda/: CHANGELOG.md  LICENSE  tiny-lambda.cabal
tiny-lambda/src/: SExprParser.hs  Terms.hs
