cabal-version:      3.0
name:               bibliomi
version:            0.1.0.0
license:            MIT
author:             indrjo
maintainer:         dedej.indrjo@gmail.com
-- copyright:
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
-- extra-doc-files:    CHANGELOG.md README.md
-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

executable bibliomi
    ghc-options:      -Wall -O2
    main-is:          Main.hs
    other-modules:    Types
                      Scrapers
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      extra >= 1.7.16,
                      parsec >= 3.1.16.1,
                      scalpel >= 0.6.2
    hs-source-dirs:   src
    default-language: Haskell2010

